FEAT: Add task id in packet and task id checker. FEAT: Create WorkerPacket for communicate between server and worker. FEAT: Change default logger to Log4j2. FEAT: Divide log4j2.properties by spring profile. FEAT: Set various log level. REF: Change property name in Worker. DOCS: Add some new annotation and fix some.

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	configureEach {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' // exclude default logger
+	}
 }
 
 repositories {
