FEAT: Changed style of log4j in production FEAT: Changed file name `TurtlemqAppilcation`

--- a/src/main/resources/log4j2-prod.properties
+++ b/src/main/resources/log4j2-prod.properties
@@ -1,8 +1,11 @@
 # Root Logger
-rootLogger=INFO, STDOUT
+rootLogger=INFO, FILE
 
-# Direct log messages to stdout
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %highlight{[%-5level]} %d{yyyy-MM-dd HH:mm:ss.SSS} [%c{1}] - %msg%n
+property.ymd=$${date:yyyy-MM-dd}
+
+# Define a file appender
+appender.file.type = File
+appender.file.name = FILE
+appender.file.fileName = /app/logs/turtle/turtle.${ymd}.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = %highlight{[%-5level]} %d{yyyy-MM-dd HH:mm:ss.SSS} [%c{1}] - %msg%n
